<resources>
    <string name="app_name">Mybusiness</string>
    <string name="action_settings">Settings</string>
    <string name="connecterr">网络连接错误</string>
    <string name="home_str">首页</string>
    <string name="video_str">视频</string>
    <string name="note_str">小说</string>
    <string name="picture_str">图片</string>
    <string name="setting">设置</string>
    <string name="login_name">登录</string>
    <string name="reg_name">注册</string>
    <string name="register_imm">立即注册</string>
    <string name="remeberpassword">记住密码</string>
    <string name="account">账号</string>
    <string name="phonenum">手机号</string>
    <string name="country">国家</string>
    <string name="authcode">验证码</string>
    <string name="password">密码</string>
    <string name="plzphonenum">请输入手机号</string>
    <string name="plzauthcode">请输入验证码</string>
    <string name="plzpassword">请输入密码</string>
    <string name="send">发送</string>
    <string name="sexual">性别</string>
    <string name="videopause">暂停</string>
    <string name="downloadfail">下载失败</string>
    <string name="downloadManage">下载管理</string>
    <string name="finishwithMerge">文件已下载完成，正在合成视频</string>
    <string name="complelete">文件下载完成</string>
    <string name="tip">发表评论时间间隔不得少于3秒</string>
    <string name="writecomment">写评论</string>
    <string name="remaintritrialtime">可用时间</string>
    <string name="noconnection">无网络连接，请检查网络</string>
    <string name="load_more_text">正在加载...</string>
    <string name="nomoredata">已无更多数据</string>
    <string name="selectall">全 选</string>
    <string name="delete">删除</string>
    <string name="edit">编 辑</string>
    <string name="spaceshowdetail" formatted="false">可用%s/总共%s</string>
    <string name="unknowerrorExits"> 未知错误->已存在文件</string>
    <string name="fetchm3u8list"> 正在下载文件列表</string>
    <string name="filelistauth">文件完整性校验</string>
    <string name="switchonscreenlock">启用屏幕锁</string>
    <string name="editscreenlock">修改屏幕锁图案</string>
    <string name="switchoffscreenlock">关闭屏幕锁</string>
    <string name="plsconnectpoint">请解锁屏幕锁</string>
    <string name="forgetpassword">忘记密码</string>
    <string name="unlockbypassword">账户密码解锁</string>
    <string name="showonpresshome">当点击Home键后返回APP需要验证</string>
    <string name="autohandup">自动挂起</string>
    <string name="confirm">确定</string>
    <string name="time_minute">分钟</string>
    <string name="placeholdata">China  (+86)</string>
    <string name="selectcountry">选择国家</string>
    <string name="fetchcountrycode">正在获取国家列表</string>
    <string name="fetchcountrycodefail">获取国家列表失败</string>
    <string name="authonOPeningAPP">打开APP需要验证</string>
    <string name="screenlocktips2">屏幕锁已经关闭</string>
    <string name="screenlocktips">请连接4-9个点的密码</string>
    <string name="screenlocktips3">请再次连接和上次一样的图案</string>
    <string name="screenlocktips4">与上一次的图案不一致,请重新绘制</string>
    <string name="screenlocktips5">屏幕锁设置成功</string>
    <string name="screenlocktips6">请输入原密码图案</string>
    <string name="screenlocktips8">请设置与原密码不一样的新密码图案</string>
    <string name="screenlocktips7">绘制原密码错误,请再试一次</string>
    <string name="screenlocktips9">屏幕锁可有效防止您的隐私泄露，在你忘记关闭APP或者不想别人使用的时候</string>
    <string name="screenlocktips10">自动挂起说明:如果当前界面无操作(不包括正在看视频)将设置的时间内弹出屏幕锁窗口</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="gay">同志</string>
    <string name="lesbian">蕾丝</string>
    <string name="shemale">中性</string>
    <string name="plzinputphonenum">请输入正确的手机号码</string>
    <string name="plzinputauthnum">请输入正确的手机验证码</string>
    <string name="plzinputpassword">请输入密码</string>
    <string name="plzselectcountry">请选择国家</string>
    <string name="plzselectsexual">请选择性别</string>
    <string name="plzlogin">请登录</string>

    <string name="Success_NewFile">已加入下载队列</string>
    <string name="Success_NotYetFinish">视频正在下载</string>
    <string name="Failure_Exits">视频已下载完成</string>
    <string name="Failure_ERROR">下载出错 -_-</string>
    <string name="Failure_Full" formatted="false">下载最大任务数为%s</string>
    <string name="Failure_InLine" >此视频正在下载中</string>

    <string-array name="sexuals">
        <item>男</item>
        <item>女</item>
        <item>同志</item>
        <item>女同</item>
        <item>妖</item>
    </string-array>

    <string-array name="country">
        <item>欧美</item>
        <item>亚洲</item>
    </string-array>
    <string-array name="settingmenu">
        <item>屏幕锁</item>
        <item>收藏夹</item>
        <item>下载管理</item>
        <item>缓存清除</item>
    </string-array>
</resources>
