<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.a8android888.bocforandroid.MainActivity">

    <RadioGroup
        android:id="@+id/bottomview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        >
        <RadioButton
            android:button="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dip"
            android:textColor="@color/hompagetitlecolor"
            android:gravity="center"
            android:id="@+id/home"
            android:layout_weight="1"
            android:drawableTop="@drawable/mainpage_radiobtn"
            android:drawablePadding="3dip"
            android:text="@string/home_str"
            android:textSize="13sp"
            />

        <ImageView
            android:layout_width="1px"
            android:layout_height="fill_parent"
            android:background="@color/line"
            />
        <RadioButton
            android:button="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dip"
            android:textColor="@color/hompagetitlecolor"
            android:gravity="center"
            android:layout_weight="1"
            android:id="@+id/video"
            android:drawableTop="@drawable/mainpage_radiobtn"
            android:drawablePadding="5dip"
            android:text="@string/video_str"
            android:textSize="13sp"
            />
        <ImageView
            android:layout_width="1px"
            android:layout_height="fill_parent"
            android:background="@color/line"
            />
        <RadioButton
            android:button="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dip"
            android:textColor="@color/hompagetitlecolor"
            android:gravity="center"
            android:layout_weight="1"
            android:drawableTop="@drawable/mainpage_radiobtn"
            android:drawablePadding="5dip"
            android:id="@+id/picture"
            android:text="@string/picture_str"
            android:textSize="13sp"
            />
        <ImageView
            android:layout_width="1px"
            android:layout_height="fill_parent"
            android:background="@color/line"
            />
        <RadioButton
            android:button="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dip"
            android:textColor="@color/hompagetitlecolor"
            android:gravity="center"
            android:layout_weight="1"
            android:drawableTop="@drawable/mainpage_radiobtn"
            android:drawablePadding="5dip"
            android:id="@+id/note"
            android:text="@string/note_str"
            android:textSize="13sp"
            />
        <ImageView
            android:layout_width="1px"
            android:layout_height="fill_parent"
            android:background="@color/line"
            />
        <RadioButton
            android:button="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dip"
            android:textColor="@color/hompagetitlecolor"
            android:gravity="center"
            android:layout_weight="1"
            android:drawableTop="@drawable/mainpage_radiobtn"
            android:drawablePadding="5dip"
            android:id="@+id/setting"
            android:text="@string/setting"
            android:textSize="13sp"
            />
    </RadioGroup>
    <ImageView
        android:id="@+id/lineview"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_above="@id/bottomview"
        android:background="@color/line"
        />
    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/lineview"
        >
    </FrameLayout>
</RelativeLayout>
